--- a/style.css
+++ b/style.css
@@ -35,12 +35,12 @@ A red 200 x 200 x 200px cube
 </style>
 
 <ul id="cube1" class="qube">
-	<li class="front"></li>
-	<li class="left"></li>
+	<li class="f"></li>
+	<li class="l"></li>
 	<li class="back"></li>
-	<li class="right"></li>
-	<li class="top"></li>
-	<li class="bottom"></li>
+	<li class="r"></li>
+	<li class="t"></li>
+	<li class="d"></li>
 </ul>
 
 */
@@ -60,7 +60,7 @@ A red 200 x 200 x 200px cube
 	transform-style: preserve-3d;
 }
 
-.front .left .back .right .top .bottom {
+.f .l .back .r .t .d {
   margin-left: 50%;
   margin-top: 50%;
 }
@@ -114,7 +114,7 @@ A red 200 x 200 x 200px cube
 			background-size: 300%;
 		}
 
-	.qube > .front,
+	.qube > .f,
 	.qube.faces > *:nth-child(1) {
 		/* This is the real breakthrough: We can't just translateZ(-100%) because Z has no dimension value for calculating a percentage, however we can be sneaky and rotate such that we can translate on an axis that *does* have real dimensions, and then we can rotate back! */
 		-webkit-transform: rotateX(90deg) translateY(50%) rotateX(-90deg);
@@ -122,103 +122,103 @@ A red 200 x 200 x 200px cube
 		transform: rotateX(90deg) translateY(50%) rotateX(-90deg);
 	}
 
-		.qube > .front:after,
+		.qube > .f:after,
 		.qube.faces > *:nth-child(1):after {
 		}
 
-		.qube.textured > #front,
+		.qube.textured > #f,
 		.qube.textured.faces > *:nth-child(1) {
 			background-position: 0 0;
 		}
 
-	.qube > #back,
+	.qube > #b,
 	.qube.faces > *:nth-child(3) {
 		-webkit-transform: rotateY(180deg) rotateX(90deg) translateY(50%) rotateX(-90deg);
 		-moz-transform: rotateY(180deg) rotateX(90deg) translateY(50%) rotateX(-90deg);
 		transform: rotateY(180deg) rotateX(90deg) translateY(50%) rotateX(-90deg);
 	}
 
-		.qube > #back:after,
+		.qube > #b:after,
 		.qube.faces > *:nth-child(3):after {
 			background: rgba(0, 0, 0, 0.6);
 		}
 
-		.qube.x-axis > #back,
+		.qube.x-axis > #b,
 		.qube.x-axis.faces > *:nth-child(3) {
 			-webkit-transform: rotateX(90deg) translateY(-50%) rotateX(90deg);
 			-moz-transform: rotateX(90deg) translateY(-50%) rotateX(90deg);
 			transform: rotateX(90deg) translateY(-50%) rotateX(90deg);
 		}
 
-		.qube.textured > #back,
+		.qube.textured > #b,
 		.qube.textured.faces > *:nth-child(3) {
 			background-position: -100% 0;
 		}
 
-	.qube > #left,
+	.qube > #l,
 	.qube.faces > *:nth-child(2) {
 		-webkit-transform: translateX(-50%) rotateY(-90deg);
 		-moz-transform: translateX(-50%) rotateY(-90deg);
 		transform: translateX(-50%) rotateY(-90deg);
 	}
 
-		.qube > #left:after,
+		.qube > #l:after,
 		.qube.faces > *:nth-child(2):after {
 			background: rgba(0, 0, 0, 0.5);
 		}
 
-		.qube.textured > #left,
+		.qube.textured > #l,
 		.qube.textured.faces > *:nth-child(2) {
 			background-position: -200% 0;
 		}
 
-	.qube > #right,
+	.qube > #r,
 	.qube.faces > *:nth-child(4) {
 		-webkit-transform: translateX(50%) rotateY(90deg);
 		-moz-transform: translateX(50%) rotateY(90deg);
 		transform: translateX(50%) rotateY(90deg);
 	}
 
-		.qube > #right:after,
+		.qube > #r:after,
 		.qube.faces > *:nth-child(4):after {
 			background: rgba(0, 0, 0, 0.3);
 		}
 
-		.qube.textured > #right,
+		.qube.textured > #r,
 		.qube.textured.faces > *:nth-child(4) {
 			background-position: 0 -100%;
 		}
 
-	.qube > #top,
+	.qube > #t,
 	.qube.faces > *:nth-child(5) {
 		-webkit-transform: translateY(-50%) rotateX(90deg);
 		-moz-transform: translateY(-50%) rotateX(90deg);
 		transform: translateY(-50%) rotateX(90deg);
 	}
 
-		.qube > #top:after,
+		.qube > #t:after,
 		.qube.faces > *:nth-child(5):after {
 			background: rgba(0, 0, 0, 0.2);
 		}
 
-		.qube.textured > #top,
+		.qube.textured > #t,
 		.qube.textured.faces > *:nth-child(5) {
 			background-position: -100% -100%;
 		}
 
-	.qube > #bottom,
+	.qube > #d,
 	.qube.faces > *:nth-child(6) {
 		-webkit-transform: translateY(50%) rotateX(-90deg);
 		-moz-transform: translateY(50%) rotateX(-90deg);
 		transform: translateY(50%) rotateX(-90deg);
 	}
 
-		.qube > #bottom:after,
+		.qube > #d:after,
 		.qube.faces > *:nth-child(6):after {
 			background: rgba(0, 0, 0, 0.7);
 		}
 
-		.qube.textured > #bottom,
+		.qube.textured > #d,
 		.qube.textured.faces > *:nth-child(6) {
 			background-position: -200% -100%;
 		}
@@ -234,9 +234,9 @@ A red 200 x 200 x 200px cube
 
 #container {
   display: grid;
-  grid-template-areas: ". top ."
-  "left qube right"
-  ". bottom .";
+  grid-template-areas: ". t ."
+  "l qube r"
+  ". d .";
   grid-template-columns: repeat(3,32vw);
   grid-template-rows: repeat(3,32vh);
   justify-items: center;
@@ -244,17 +244,17 @@ A red 200 x 200 x 200px cube
 }
 
 #bottom {
-  grid-area: bottom;
+  grid-area: d;
 }
 #top {
-  grid-area: top;
+  grid-area: t;
   cursor: pointer;
 }
 #right {
-  grid-area: right;
+  grid-area: r;
 }
 #left {
-  grid-area: left;
+  grid-area: l;
 }
 
 .cube13 > * { color: #000; background: #ddc; }
