--- a/style.css
+++ b/style.css
@@ -60,10 +60,6 @@ A red 200 x 200 x 200px cube
 	transform-style: preserve-3d;
 }
 
-.f .l .back .r .t .d {
-  margin-left: 50%;
-  margin-top: 50%;
-}
 .qube {
   grid-area: qube;
 	position: absolute;
@@ -114,15 +110,16 @@ A red 200 x 200 x 200px cube
 			background-size: 300%;
 		}
 
-	.qube > .f,
+	.qube > #f,
 	.qube.faces > *:nth-child(1) {
 		/* This is the real breakthrough: We can't just translateZ(-100%) because Z has no dimension value for calculating a percentage, however we can be sneaky and rotate such that we can translate on an axis that *does* have real dimensions, and then we can rotate back! */
 		-webkit-transform: rotateX(90deg) translateY(50%) rotateX(-90deg);
 		-moz-transform: rotateX(90deg) translateY(50%) rotateX(-90deg);
 		transform: rotateX(90deg) translateY(50%) rotateX(-90deg);
+		transform: scale(-1,1_);
 	}
 
-		.qube > .f:after,
+		.qube > #f:after,
 		.qube.faces > *:nth-child(1):after {
 		}
 
