--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ A red 200 x 200 x 200px cube
 */
 
 * {padding: 0;
+	margin: 0;
 }
 
 .qube-perspective {
@@ -116,7 +117,6 @@ A red 200 x 200 x 200px cube
 		-webkit-transform: rotateX(90deg) translateY(50%) rotateX(-90deg);
 		-moz-transform: rotateX(90deg) translateY(50%) rotateX(-90deg);
 		transform: rotateX(90deg) translateY(50%) rotateX(-90deg);
-		transform: scale(-1,1_);
 	}
 
 		.qube > #f:after,
@@ -139,6 +139,7 @@ A red 200 x 200 x 200px cube
 		.qube.faces > *:nth-child(3):after {
 			background: rgba(0, 0, 0, 0.6);
 		}
+
 
 		.qube.x-axis > #b,
 		.qube.x-axis.faces > *:nth-child(3) {
@@ -221,7 +222,7 @@ A red 200 x 200 x 200px cube
 		}
 
 .cube13 {
-  width: 150px; height: 150px;
+  width: 50%; height: 50%;
   transition: transform 1500ms ease;
 }
 
@@ -234,8 +235,8 @@ A red 200 x 200 x 200px cube
   grid-template-areas: ". t ."
   "l qube r"
   ". d .";
-  grid-template-columns: repeat(3,32vw);
-  grid-template-rows: repeat(3,32vh);
+  grid-template-columns: 15vw 70vw 15vw;
+  grid-template-rows: 15vh 70vh 15vw;
   justify-items: center;
   align-items: center;
 }
